fix: adjust popover z-index values for proper layering

--- a/packages/components/src/popover/styles.less
+++ b/packages/components/src/popover/styles.less
@@ -31,7 +31,7 @@
     border-radius: 2px;
     .overlay-shadow();
     padding: 8px 10px;
-    z-index: 10001;
+    z-index: 10000;
     img {
       max-width: 300px;
       display: inline-block;
@@ -70,6 +70,7 @@
     position: absolute;
     width: 0;
     height: 0;
+    z-index: 10001;
     border-color: transparent;
     border-style: solid;
   }
